@@ -146,7 +146,7 @@ public class SysPostServiceImpl implements ISysPostService
             SysPost post = selectPostById(postId);
             if (countUserPostById(postId) > 0)
             {
-                throw new ServiceException(String.format("%1$s已分配,不能删除", post.getPostName()));
+                throw new ServiceException("%1$s已分配,不能删除".formatted(post.getPostName()));
             }
         }
         return postMapper.deletePostByIds(postIds);
